--- a/proyectofinal7/BibliotecaApp/Libros/templates/libros/libro_form.html
+++ b/proyectofinal7/BibliotecaApp/Libros/templates/libros/libro_form.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
-{% load static %}
 
-{% block title %}Crear Libro{% endblock %}
+{% block title %}Formulario de Libro{% endblock %}
 
 {% block content %}
-    <h1>{% if form.instance.pk %}Editar Libro{% else %}Agregar Libro{% endif %}</h1>
+    <h1>{% if form.instance.pk %}Modificar{% else %}Añadir{% endif %} Libro</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Guardar</button>
     </form>
+    <a href="{% url 'lista_libros' %}">Cancelar</a>
 {% endblock %}
-
