--- a/proyectofinal7/BibliotecaApp/autor/templates/autor/crear_autor.html
+++ b/proyectofinal7/BibliotecaApp/autor/templates/autor/crear_autor.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Agregar Autor</title>
-</head>
-<body>
-    <h1>Agregar Autor</h1>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Crear Autor{% endblock %}
+
+{% block content %}
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Guardar</button>
     </form>
-</body>
-</html>
+
+{% endblock %}
