--- a/proyectofinal7/BibliotecaApp/Libros/templates/libros/libro_confirm_delete.html
+++ b/proyectofinal7/BibliotecaApp/Libros/templates/libros/libro_confirm_delete.html
@@ -9,5 +9,5 @@
         {% csrf_token %}
         <button type="submit">Confirmar</button>
     </form>
-    <a href="{% url 'lista_libros' %}">Cancelar</a>
+    <a href="{% url 'listar_libros' %}">Cancelar</a>
 {% endblock %}
