--- a/proyectofinal7/BibliotecaApp/Libros/templates/libros/libro_form.html
+++ b/proyectofinal7/BibliotecaApp/Libros/templates/libros/libro_form.html
@@ -9,5 +9,5 @@
         {{ form.as_p }}
         <button type="submit">Guardar</button>
     </form>
-    <a href="{% url 'lista_libros' %}">Cancelar</a>
+    <a href="{% url 'listar_libros' %}">Cancelar</a>
 {% endblock %}
