--- a/proyectofinal7/BibliotecaApp/homeapp/templates/homeapp/home.html
+++ b/proyectofinal7/BibliotecaApp/homeapp/templates/homeapp/home.html
@@ -7,7 +7,7 @@
     <p>Este proyecto permite realizar las siguientes acciones:</p>
     <ul>
         <li><a href="{% url 'lista_autores' %}">Gestionar Autores</a></li>
-        <li><a href="{% url 'lista_libros' %}">Gestionar Libros</a></li>
+        <li><a href="{% url 'listar_libros' %}">Gestionar Libros</a></li>
     </ul>
 {% endblock %}
 
