--- a/proyectofinal7/BibliotecaApp/templates/footer.html
+++ b/proyectofinal7/BibliotecaApp/templates/footer.html
@@ -1,7 +1,7 @@
-<footer>
-    <div>
-        <h1>
-            este es mi footer
-        </h1>
+<footer class="text-center">
+    <div class="container">
+      <p>&copy; 2024 BiblioApp. Todos los derechos reservados.</p>
+      <p>Gestiona tus libros personales de manera fácil y eficiente.</p>
     </div>
-</footer>
+  </footer>
+  
